# youtube_loader

./: CMakeLists.txt  README.md
include/: CurlHandler.hpp  Loader.hpp  StringProcessor.hpp  curl.hpp  download.hpp  string_processing.hpp
src/: CurlHandler.cpp  Loader.cpp  Main.cpp  StringProcessor.cpp  main.cpp  mp4_to_mp3.sh
